// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accomodation Item  Page should render accomodation item page correctly 1`] = `
<div
  className="accommodation-container"
>
  <h3 />
  <div />
  <div
    className="accomodation-type"
  >
    <span>
      Accomodation Type: 
      Apart
    </span>
  </div>
  <div
    className="clearfix"
  >
    <button
      className="button button--div"
      onClick={[Function]}
    >
      See our last available rooms &gt;
    </button>
  </div>
</div>
`;

exports[`Accomodation Item  Page should render type if type exists 1`] = `
<div
  className="accommodation-container"
>
  <h3 />
  <div />
  <div>
    Facilities
    <small
      className="list-header"
    >
      <li
        key="1"
        label="bed"
      >
        bed
      </li>
    </small>
  </div>
  <div
    className="clearfix"
  >
    <button
      className="button button--div"
      onClick={[Function]}
    >
      See our last available rooms &gt;
    </button>
  </div>
</div>
`;
